--- a/style.css
+++ b/style.css
@@ -20,14 +20,15 @@ html,body{
     overflow: hidden;
 }
 
+img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
 .photo-holder{
-    height: 250px;
-    width: 200px;
-    background: url('Pic.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    border: 1px solid black;
     position: absolute;
-    visibility: hidden;
+    overflow: hidden;
+    height: 200px;
+    width: 200px;
 }
